# rz-news-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: publish.yml
src/rz_flow/: __init__.py  ai.py  config.py  flow_config.py  logging_config.py  main.py  models.py  parser.py  pipeline.py  scraper.py  storage.py  telegram.py
src/rz_flow/sources/: __init__.py  base.py  rzeszow24.py  rzeszow_news.py
tests/: conftest.py  test_ai.py  test_config.py  test_flow_config.py  test_logging_config.py  test_main_cli.py  test_main_run_report.py  test_parser.py  test_pipeline.py  test_scraper.py  test_storage.py  test_telegram.py
tests/fixtures/: imprezy_sample.html  najnowsze_sample.html  rzeszow_news_sample.html  wiadomosci_sample.html
